--- a/packages/vuetify/src/styles/utilities/_text.sass
+++ b/packages/vuetify/src/styles/utilities/_text.sass
@@ -1,6 +1,6 @@
-.v-application
-  @each $size, $width in $grid-breakpoints
-    @media all and (min-width: $width)
+@each $size, $width in $grid-breakpoints
+  @media all and (min-width: $width)
+    .v-application
       .text-#{$size}-left
         text-align: left !important
 
@@ -13,18 +13,19 @@
       .text-#{$size}-justify
         text-align: justify !important
 
-      .text-#{$size}-start
-        +ltr()
-          text-align: left !important
-        +rtl()
-          text-align: right !important
+    .text-#{$size}-start
+      +ltr()
+        text-align: left !important
+      +rtl()
+        text-align: right !important
 
-      .text-#{$size}-end
-        +ltr()
-          text-align: right !important
-        +rtl()
-          text-align: left !important
+    .text-#{$size}-end
+      +ltr()
+        text-align: right !important
+      +rtl()
+        text-align: left !important
 
+.v-application
   @each $name, $weight in $font-weights
     .font-weight
       &-#{$name}
